Fix event tile problem of jumping when list move

--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -116,6 +116,7 @@ a {
   max-width: 1140px;
   margin: 0 auto;
   padding: 0 20px;
+  position: relative;
 
   @include mq(sm) {
     padding: 0 28px;
